# ExtractHog_CPP

./: CMakeLists.txt  main.cpp
samples/: img128_0.xml
